# fallow

./: .gitignore  AGENTS.md  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP-HEALTH.md  ROADMAP.md  action.yml  deny.toml  schema.json
.githooks/: pre-push
crates/cli/: Cargo.toml
crates/cli/src/: audit.rs  baseline.rs  check.rs  combined.rs  dupes.rs  explain.rs  fix.rs  health.rs  health_types.rs  init.rs  lib.rs  list.rs  main.rs  report.rs  schema.rs  validate.rs  vital_signs.rs  watch.rs
crates/cli/src/check/: filtering.rs  mod.rs  output.rs  rules.rs
crates/cli/src/fix/: deps.rs  enum_members.rs  exports.rs  io.rs  mod.rs
crates/cli/src/health/: hotspots.rs  mod.rs  scoring.rs  targets.rs
crates/cli/src/health_types/: coverage.rs  mod.rs  scores.rs  targets.rs  trends.rs  vital_signs.rs
crates/cli/src/migrate/: jscpd.rs  knip.rs  knip_fields.rs  knip_tables.rs  mod.rs
crates/cli/src/regression/: baseline.rs
crates/cli/src/report/: badge.rs  codeclimate.rs  compact.rs  grouping.rs  human.rs  json.rs  markdown.rs  mod.rs  sarif.rs  test_helpers.rs
crates/cli/tests/: audit_tests.rs  exit_code_tests.rs  health_tests.rs  list_tests.rs  snapshot_tests.rs
crates/cli/tests/common/: mod.rs
crates/cli/tests/snapshots/: health_tests__health_human_complexity.snap  snapshot_tests__codeclimate_output.snap  snapshot_tests__compact_output.snap  snapshot_tests__json_circular_deps_only.snap  snapshot_tests__json_duplicate_exports_only.snap  snapshot_tests__json_empty.snap  snapshot_tests__json_mixed_severity.snap  snapshot_tests__json_multiple_exports_same_file.snap  snapshot_tests__json_output.snap  snapshot_tests__json_re_export_variant.snap  snapshot_tests__json_type_only_deps.snap  snapshot_tests__json_unlisted_deps_only.snap  snapshot_tests__json_unresolved_imports_only.snap  snapshot_tests__json_unused_class_members_only.snap  snapshot_tests__json_unused_deps_only.snap  snapshot_tests__json_unused_dev_deps_only.snap  snapshot_tests__json_unused_enum_members_only.snap  snapshot_tests__json_unused_exports_only.snap  snapshot_tests__json_unused_files_only.snap  snapshot_tests__json_unused_optional_deps_only.snap  snapshot_tests__json_unused_types_only.snap  snapshot_tests__json_workspace_deps.snap  snapshot_tests__markdown_health_with_score.snap  snapshot_tests__sarif_circular_deps_only.snap  snapshot_tests__sarif_duplicate_exports_only.snap  snapshot_tests__sarif_empty.snap  snapshot_tests__sarif_health_empty.snap  snapshot_tests__sarif_health_with_score.snap  snapshot_tests__sarif_mixed_severity.snap  snapshot_tests__sarif_multiple_exports_same_file.snap  snapshot_tests__sarif_output.snap  snapshot_tests__sarif_re_export_variant.snap  snapshot_tests__sarif_type_only_deps.snap  snapshot_tests__sarif_unlisted_deps_only.snap  snapshot_tests__sarif_unresolved_imports_only.snap  snapshot_tests__sarif_unused_class_members_only.snap  snapshot_tests__sarif_unused_deps_only.snap  snapshot_tests__sarif_unused_dev_deps_only.snap  snapshot_tests__sarif_unused_enum_members_only.snap  snapshot_tests__sarif_unused_exports_only.snap  (+4 more)
crates/config/: Cargo.toml
crates/config/src/: config.rs  external_plugin.rs  framework.rs  workspace.rs
crates/config/src/config/: boundaries.rs  duplicates_config.rs  format.rs  mod.rs  parsing.rs  resolution.rs  rules.rs
crates/config/src/workspace/: mod.rs  parsers.rs
crates/core/: Cargo.toml
crates/core/benches/: allocations.rs  analysis.rs  helpers.rs
crates/core/src/: analyze.rs  cache.rs  churn.rs  cross_reference.rs  discover.rs  errors.rs  extract.rs  graph.rs  lib.rs  progress.rs  project.rs  resolve.rs  results.rs  scripts.rs  suppress.rs  trace.rs
crates/core/src/analyze/: boundary.rs  mod.rs  package_json_utils.rs  predicates.rs  unused_deps.rs  unused_deps_tests.rs  unused_exports.rs  unused_files.rs  unused_members.rs
crates/core/src/discover/: entry_points.rs  infrastructure.rs  mod.rs  parse_scripts.rs  walk.rs
crates/core/src/duplicates/: detect.rs  families.rs  mod.rs  normalize.rs  token_visitor.rs  types.rs
crates/core/src/extract/: astro.rs  mdx.rs  parse.rs
crates/core/src/plugins/: angular.rs  ava.rs  babel.rs  biome.rs  changesets.rs  commitlint.rs  config_parser.rs  cypress.rs  docusaurus.rs  drizzle.rs  eslint.rs  expo.rs  gatsby.rs  graphql_codegen.rs  jest.rs  knex.rs  mocha.rs  mod.rs  nestjs.rs  nextjs.rs  nuxt.rs  nx.rs  playwright.rs  postcss.rs  prettier.rs  prisma.rs  react_native.rs  react_router.rs  registry.rs  remix.rs  rolldown.rs  rollup.rs  semantic_release.rs  sentry.rs  storybook.rs  stylelint.rs  tailwind.rs  tooling.rs  tsup.rs  turborepo.rs  (+5 more)
crates/core/src/scripts/: mod.rs  resolve.rs  shell.rs
crates/core/tests/: integration_test.rs
crates/core/tests/integration_test/: barrel_exports.rs  basic_analysis.rs  boundary_violations.rs  caching.rs  common.rs  config_file_loading.rs  css_modules.rs  dependencies.rs  duplicates.rs  dynamic_imports.rs  external_plugins.rs  false_positive_fixes.rs  frameworks.rs  html_entry.rs  member_detection.rs  production_mode.rs  rules_config.rs  sfc_parsing.rs  type_only_deps.rs  unreachable_exports.rs  workspaces.rs
crates/extract/: Cargo.toml
crates/extract/src/: astro.rs  cache.rs  complexity.rs  css.rs  html.rs  lib.rs  mdx.rs  parse.rs  sfc.rs  suppress.rs  template_usage.rs  visitor.rs
crates/extract/src/cache/: conversion.rs  mod.rs  store.rs  tests.rs  types.rs
crates/extract/src/sfc_template/: mod.rs  scanners.rs  shared.rs  svelte.rs  vue.rs
crates/extract/src/tests/: astro.rs  css.rs  js_ts.rs  mdx.rs  mod.rs  sfc.rs
crates/extract/src/visitor/: declarations.rs  helpers.rs  mod.rs  tests.rs  visit_impl.rs
crates/graph/: Cargo.toml
crates/graph/src/: graph.rs  lib.rs  project.rs  resolve.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: code_actions.rs  code_lens.rs  diagnostics.rs  hover.rs  main.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: params.rs  server.rs
crates/types/: Cargo.toml
crates/types/src/: discover.rs  extract.rs  lib.rs  results.rs  serde_path.rs  suppress.rs
(+149 files in other folders)
