[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/fallow-rs/fallow"

[workspace.dependencies]
fallow-core = { version = "0.3.0", path = "crates/core" }
fallow-config = { version = "0.3.0", path = "crates/config" }
fallow-extract = { version = "0.3.0", path = "crates/extract" }
fallow-graph = { version = "0.3.0", path = "crates/graph" }
fallow-types = { version = "0.3.0", path = "crates/types" }

# Parsing & analysis
oxc_allocator = "0.120"
oxc_ast = "0.120"
oxc_ast_visit = "0.120"
oxc_parser = "0.120"
oxc_resolver = "11"
oxc_span = "0.120"
oxc_syntax = "0.120"

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
json_comments = "0.2"
toml = "1.0"
schemars = "1"

# Parallelism
rayon = "1"

# Concurrent data structures
dashmap = "6"

# File system
ignore = "0.4"
glob = "0.3"
globset = { version = "0.4", features = ["serde1"] }
regex = "1"

# Hashing
xxhash-rust = { version = "0.8", features = ["xxh3"] }
rustc-hash = "2"

# Caching
bincode = "2"

# Diagnostics & output
colored = "3"
indicatif = "0.18"
miette = { version = "7", features = ["fancy"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Graph
fixedbitset = "0.5"

# LSP
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }

# File watching
notify = "8"
notify-debouncer-mini = "0.7"

# Testing
criterion = { version = "0.8", features = ["html_reports"] }
dhat = "0.3"
insta = { version = "1", features = ["yaml"] }
proptest = "1"
tempfile = "3"

[workspace.lints.clippy]
# Pedantic
pedantic = { level = "warn", priority = -1 }
# Restrictions
dbg_macro = "warn"
todo = "warn"
print_stdout = "warn"
print_stderr = "warn"
# Allow common pedantic false positives
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_possible_wrap = "allow"
too_many_lines = "allow"
items_after_statements = "allow"
single_match_else = "allow"
if_not_else = "allow"
redundant_closure_for_method_calls = "allow"
similar_names = "allow"
wildcard_imports = "allow"
unnested_or_patterns = "allow"

[workspace.lints.rust]
unsafe_code = "warn"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
opt-level = 3
