[package]
name = "fallow-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "CLI for the fallow dead code analyzer"
readme = "../../README.md"

[[bin]]
name = "fallow"
path = "src/main.rs"

[dependencies]
fallow-core = { workspace = true }
fallow-config = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
json_comments = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
notify = { workspace = true }
rayon = { workspace = true }
notify-debouncer-mini = { workspace = true }
tempfile = { workspace = true }
rustc-hash = { workspace = true }

[lib]
name = "fallow_cli"
path = "src/lib.rs"

[dev-dependencies]
toml = { workspace = true }
insta = { workspace = true }

[lints]
workspace = true
