[package]
name = "fallow-config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Configuration types for the fallow TypeScript/JavaScript codebase analyzer"
readme = "../../README.md"

[dependencies]
dunce = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
json_comments = { workspace = true }
toml = { workspace = true }
schemars = { workspace = true }
glob = { workspace = true }
globset = { workspace = true }
miette = { workspace = true }
rustc-hash = { workspace = true }
tracing = { workspace = true }
ureq = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }

[lints]
workspace = true
