[package]
name = "fallow-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "MCP server for the fallow TypeScript/JavaScript codebase analyzer"
readme = "../../README.md"

[[bin]]
name = "fallow-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.3", features = ["transport-io"] }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
