[package]
name = "fallow-types"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Shared types for the fallow TypeScript/JavaScript codebase analyzer"
readme = "../../README.md"

[dependencies]
# Serialization
serde = { workspace = true }

# AST spans (for ExportInfo, ImportInfo, etc.)
oxc_span = { workspace = true }

# Cache serialization (for MemberAccess)
bincode = { workspace = true }

[lints]
workspace = true
